# thunderbolt

./: .prettierignore  Makefile  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml  tauri-v2-release.yml
backend/: Makefile  main.py  proxy.py  pyproject.toml
backend/mcp_tools/: ddg_search.py  server.py  weather.py
backend/tests/: test_lifespan.py  test_locations.py  test_mcp_weather.py  test_proxy.py  test_simple.py
docs/: roadmap.md
src/: app.tsx  dal.ts  index.tsx  layout.tsx  types.ts  ui-kit.tsx  welcome.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assist_embeddings/examples/: generate_embeddings.rs  get_embedding_cmd.rs  test_embeddings.rs
src-tauri/assist_embeddings/src/: embedding.rs  lib.rs
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  libsql_plugin.rs  main.rs
src-tauri/thunderbolt_embeddings/: Cargo.toml
src-tauri/thunderbolt_imap_sync/: Cargo.toml
src/ai/: fetch.ts
src/chats/: chat-state.tsx  chat.tsx  detail.tsx  layout.tsx  sidebar.tsx
src/components/: ContactPreview.tsx  DatetimePreview.tsx
src/components/chat/: chat-ui.tsx
src/components/ui/: autosize-textarea.tsx  chat-nav-button.tsx  mail-button.tsx  mail-card.tsx  prompt-input.tsx
src/db/: bundle-migrations.ts  database.ts  index.ts  migrate.ts  relations.ts  tables.ts
src/db/powersync/: database.ts
src/devtools/: generate-embeddings-frontend.tsx  generate-embeddings-no-database.tsx  generate-embeddings-optimized.tsx  generate-threads.tsx  index.tsx  reset-email-messages.tsx  search.tsx
src/drizzle/: 0000_left_harrier.sql  0000_whole_typhoid_mary.sql  _migrations.ts
src/drizzle/meta/: 0000_snapshot.json  _journal.json
src/imap/: sync.ts
src/lib/: ai.ts  email.ts  embeddings.ts  fs.ts  indexer.ts  libsql.ts  plugin-libsql.ts  title-generator.ts  utils.ts
src/settings/models/: detail.tsx  layout.tsx  new.tsx
src/sideview/: message.tsx  thread.tsx
